--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -282,6 +282,7 @@
                                     <li><a href="#" th:href="@{/otherreports/motoristas/}">Reporte de Motoristas</a></li>
                                     <li><a href="#" th:href="@{/otherreports/notarios/}">Reporte de Notarios</a></li>
                                     <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/comisiones/}">Reporte de Comisiones</a></li>
                                     <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleañeros</a></li>
                                     <!--<li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>-->
