--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="1.3310000000000073"/>
-	<property name="ireport.x" value="355"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -67,97 +67,97 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		<band height="4" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="130" splitType="Stretch">
+		<band height="105" splitType="Stretch">
 			<staticText>
-				<reportElement x="238" y="103" width="30" height="15" uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30"/>
+				<reportElement x="286" y="80" width="30" height="15" uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="427" y="103" width="30" height="15" uuid="2099c35a-3732-46ab-af8c-f8f352398d7c"/>
+				<reportElement x="374" y="80" width="30" height="15" uuid="2099c35a-3732-46ab-af8c-f8f352398d7c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="628" y="97" width="80" height="15" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
+				<reportElement x="594" y="89" width="80" height="15" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="661" y="84" width="33" height="15" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
+				<reportElement x="38" y="90" width="33" height="15" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="694" y="84" width="104" height="15" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
+				<reportElement x="71" y="90" width="104" height="15" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="708" y="97" width="40" height="15" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
+				<reportElement x="674" y="89" width="40" height="15" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="268" y="103" width="92" height="15" uuid="b5211f58-5943-483b-a28b-6237897a9fdd"/>
+				<reportElement x="316" y="80" width="47" height="15" uuid="b5211f58-5943-483b-a28b-6237897a9fdd"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="458" y="103" width="100" height="15" uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3"/>
+				<reportElement x="405" y="80" width="44" height="15" uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="323" y="81" width="117" height="20" uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1"/>
+				<reportElement x="315" y="65" width="117" height="20" uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Capacitaciones]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="663" y="111" width="43" height="17" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
+				<reportElement x="626" y="76" width="43" height="17" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="12" y="103" width="100" height="15" uuid="c93b6750-7c50-4ff9-8bc9-288dc961f125"/>
+				<reportElement x="41" y="75" width="100" height="15" uuid="c93b6750-7c50-4ff9-8bc9-288dc961f125"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_caps]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="697" y="111" width="86" height="17" uuid="73700692-8fd1-4a20-a32c-43069a4398b4"/>
+				<reportElement x="660" y="76" width="86" height="17" uuid="73700692-8fd1-4a20-a32c-43069a4398b4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="8" y="11" width="140" height="70" uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b"/>
+				<reportElement x="35" y="3" width="140" height="70" uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="663" y="11" width="191" height="70" uuid="af190678-1ec9-436d-8e71-580e51e9ac38"/>
+				<reportElement x="622" y="4" width="191" height="70" uuid="af190678-1ec9-436d-8e71-580e51e9ac38"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
@@ -186,139 +186,146 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<rectangle>
-				<reportElement x="1" y="2" width="798" height="17" uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c"/>
+				<reportElement x="31" y="2" width="710" height="17" uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="12" y="0" width="100" height="17" uuid="db4def3b-df76-478d-9fab-55f1effade07"/>
+				<reportElement x="33" y="0" width="79" height="17" uuid="db4def3b-df76-478d-9fab-55f1effade07"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="129" y="0" width="100" height="17" uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3"/>
+				<reportElement x="174" y="0" width="100" height="17" uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="254" y="0" width="52" height="17" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
+				<reportElement x="305" y="0" width="32" height="17" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Horas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="323" y="0" width="147" height="17" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Capacitacion]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="487" y="0" width="100" height="17" uuid="d1efa746-ff31-49b9-b359-8776e5267773"/>
+				<reportElement x="507" y="0" width="111" height="17" uuid="d1efa746-ff31-49b9-b359-8776e5267773"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Depto Resposable]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="609" y="0" width="100" height="17" uuid="71e63620-3be4-4465-9340-d422eab94726"/>
+				<reportElement x="623" y="0" width="54" height="17" uuid="71e63620-3be4-4465-9340-d422eab94726"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="722" y="0" width="83" height="17" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
+				<reportElement x="682" y="0" width="57" height="17" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Hasta]]></text>
 			</staticText>
 			<line>
-				<reportElement x="128" y="2" width="1" height="17" uuid="21b68317-41f6-402f-9f90-a7081a192d70"/>
+				<reportElement x="167" y="2" width="1" height="17" uuid="21b68317-41f6-402f-9f90-a7081a192d70"/>
 			</line>
 			<line>
-				<reportElement x="243" y="2" width="1" height="17" uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3"/>
+				<reportElement x="299" y="2" width="1" height="17" uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3"/>
 			</line>
 			<line>
-				<reportElement x="318" y="2" width="1" height="17" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
+				<reportElement x="338" y="2" width="1" height="17" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
 			</line>
 			<line>
-				<reportElement x="479" y="2" width="1" height="17" uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a"/>
+				<reportElement x="499" y="2" width="1" height="17" uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a"/>
 			</line>
 			<line>
-				<reportElement x="608" y="2" width="1" height="17" uuid="274a8edd-e0f3-4f04-a5a3-88b19ca5286d"/>
+				<reportElement x="621" y="2" width="1" height="17" uuid="274a8edd-e0f3-4f04-a5a3-88b19ca5286d"/>
 			</line>
 			<line>
-				<reportElement x="716" y="2" width="1" height="17" uuid="f6edc88c-8733-44cd-a8db-65ca06692e02"/>
+				<reportElement x="679" y="2" width="1" height="17" uuid="f6edc88c-8733-44cd-a8db-65ca06692e02"/>
 			</line>
+			<staticText>
+				<reportElement x="343" y="2" width="147" height="17" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Capacitacion]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="14" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<textField>
-				<reportElement x="129" y="0" width="111" height="14" uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606"/>
+				<reportElement x="169" y="0" width="130" height="14" uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="254" y="0" width="26" height="14" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
-				<textElement textAlignment="Center">
+				<reportElement x="309" y="0" width="26" height="14" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{duracionhoracapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="323" y="0" width="155" height="14" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
+				<reportElement x="343" y="0" width="156" height="14" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="487" y="0" width="111" height="14" uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f"/>
+				<reportElement x="518" y="0" width="100" height="14" uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{departamentoresponsable}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="22" y="0" width="100" height="14" uuid="626474d5-125d-4b31-8814-481071c09c35"/>
+				<reportElement x="33" y="0" width="134" height="14" uuid="626474d5-125d-4b31-8814-481071c09c35"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="609" y="0" width="100" height="14" uuid="6a4487a2-327d-4fe1-a794-19fc16fb7ca2"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="628" y="1" width="48" height="14" uuid="6a4487a2-327d-4fe1-a794-19fc16fb7ca2"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="714" y="0" width="80" height="14" uuid="1b6109fe-2d7c-4179-be27-a3ac43aa2485"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="684" y="0" width="44" height="14" uuid="1b6109fe-2d7c-4179-be27-a3ac43aa2485"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="10" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="32" splitType="Stretch">
+		<band height="17" splitType="Stretch">
+			<line>
+				<reportElement x="632" y="0" width="100" height="1" uuid="afe1f8be-3e3b-48a0-a8e2-4c82777bff8a"/>
+			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="695" y="14" width="102" height="14" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
+				<reportElement mode="Opaque" x="634" y="3" width="102" height="14" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="-3" y="13" width="797" height="1" uuid="afe1f8be-3e3b-48a0-a8e2-4c82777bff8a"/>
-			</line>
 		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="32" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
