--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="61040501-82b0-436f-934f-a899fdfcb57e">
 	<property name="ireport.zoom" value="1.2100000000000009"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="152"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -19,8 +19,8 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado ,c.fechainiciocontrato,c.fechafincontrato,c.plazanominal,el.nombreinstitucion,c.salarioactual,c.sistemapago, CURRENT_DATE from empleado e inner join contrato c on e.codigoempleado=c.codigoempleado inner join empleadoexperiencialaboral ee on e.codigoempleado = ee.codigoempleado inner join experiencialaboral el
- on ee.codigoexperiencialaboral=el.codigoexperiencialaboral
+		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado ,c.fechainiciocontrato,c.fechafincontrato,c.plazanominal,el.nombreinstitucion,c.salarioactual,c.sistemapago, CURRENT_DATE from empleado e inner join contrato c on e.codigoempleado=c.codigoempleado inner join experiencialaboral el
+ on e.codigoempleado=el.codigoexperiencialaboral
  WHERE e.codigoempleado=$P{CODIGO} and
  c.fechainiciocontrato>=$P{FECHAINICIO} and
  c.fechafincontrato<=$P{FECHAFIN}]]>
@@ -49,118 +49,118 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="6" splitType="Stretch"/>
+		<band height="25" splitType="Stretch"/>
 	</title>
 	<pageHeader>
 		<band height="138" splitType="Stretch">
 			<staticText>
-				<reportElement x="188" y="88" width="145" height="17" uuid="4333c6f1-4487-4efe-ab58-6bd134eb0777"/>
+				<reportElement x="188" y="68" width="145" height="17" uuid="4333c6f1-4487-4efe-ab58-6bd134eb0777"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Constancia de Tiempo de Servicios]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="459" y="84" width="99" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
+				<reportElement x="56" y="84" width="99" height="20" uuid="5a449a22-2142-476b-807a-f6013bc9c602"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="123" y="107" width="30" height="17" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
+				<reportElement x="169" y="86" width="30" height="17" uuid="244ca124-ff83-4f3d-ba32-3c3bc5d68fcf"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="292" y="109" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
+				<reportElement x="270" y="87" width="32" height="20" uuid="5f9b6fea-0c6e-4a06-8f92-5aaf4dcc1753"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="155" y="107" width="100" height="17" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
+				<reportElement x="200" y="86" width="68" height="17" uuid="8e6536ec-e9b9-4f5b-93be-086c61db0435"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="324" y="107" width="76" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
+				<reportElement x="302" y="86" width="60" height="20" uuid="2cd14b2a-8134-4ba7-ba68-e54703e0e432"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="11" y="105" width="100" height="17" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
+				<reportElement x="28" y="67" width="100" height="17" uuid="29f14a98-f2d5-4972-bf65-e21b426580e0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_ctis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="429" y="84" width="30" height="17" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
+				<reportElement x="26" y="85" width="30" height="17" uuid="1266be68-748d-4689-b696-05c1a2e3a79d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="394" y="98" width="80" height="17" uuid="0fbdba6b-6870-489f-bee0-804927899f3f"/>
+				<reportElement x="384" y="80" width="80" height="17" uuid="0fbdba6b-6870-489f-bee0-804927899f3f"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="474" y="98" width="40" height="17" uuid="d3156da3-544c-475d-a0be-4d16e41a79c5"/>
+				<reportElement x="464" y="80" width="40" height="17" uuid="d3156da3-544c-475d-a0be-4d16e41a79c5"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="429" y="114" width="30" height="17" uuid="6171b9b9-ccd2-4e3b-ab3c-3dc5d1675bfa"/>
+				<reportElement x="417" y="64" width="30" height="17" uuid="6171b9b9-ccd2-4e3b-ab3c-3dc5d1675bfa"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="461" y="114" width="78" height="17" uuid="71bd78fd-61fb-4320-aa55-edff8662ed10"/>
+				<reportElement x="449" y="64" width="78" height="17" uuid="71bd78fd-61fb-4320-aa55-edff8662ed10"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="11" y="16" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
+				<reportElement x="28" y="0" width="142" height="65" uuid="4480b97a-a6d9-4922-94b3-9c34571a3f54"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="418" y="16" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
+				<reportElement x="420" y="0" width="154" height="65" uuid="a1d1dd88-a053-4585-aa7f-9f0eceb800c9"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="223" y="56" width="78" height="17" uuid="a45415b3-b736-45f3-9ec7-91c71d0ca0fc"/>
+				<reportElement x="223" y="39" width="78" height="17" uuid="a45415b3-b736-45f3-9ec7-91c71d0ca0fc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="188" y="36" width="150" height="17" uuid="04cbd8d9-60f2-4ecb-a1a9-84f960a22072"/>
+				<reportElement x="188" y="22" width="150" height="17" uuid="04cbd8d9-60f2-4ecb-a1a9-84f960a22072"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="174" y="16" width="188" height="17" uuid="e0dac18e-05c1-4ee9-bd53-d4213a544e47"/>
+				<reportElement x="174" y="4" width="188" height="17" uuid="e0dac18e-05c1-4ee9-bd53-d4213a544e47"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
