--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
@@ -14,13 +14,13 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select  codigoempleado, concat(nombreempleado,' ',apellidoempleado)as Empleado, DATE_FORMAT(fechaingresoministerio, '%d/%m/%Y') AS Desde from empleado where codigopuesto= 5]]>
+		<![CDATA[select e.codigoempleado,concat(e.nombreempleado,e.apellidoempleado) as Empleado,DATE_FORMAT(c.fechafincontrato,'%d/%m/%Y') AS "Fin contrato"from empleado e inner join contrato c where c.estadocontrato=1]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="Empleado" class="java.lang.String"/>
-	<field name="Desde" class="java.lang.String"/>
+	<field name="Fin contrato" class="java.lang.String"/>
 	<group name="nombreempleado">
 		<groupExpression><![CDATA[]]></groupExpression>
 	</group>
@@ -37,200 +37,196 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="8" splitType="Stretch"/>
+		<band height="15" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="151" splitType="Stretch">
+		<band height="102" splitType="Stretch">
 			<staticText>
-				<reportElement x="351" y="88" width="113" height="17" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
+				<reportElement x="306" y="4" width="186" height="17" uuid="f7139472-c3b7-425e-84dd-d21059920189"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Reporte de Motoristas]]></text>
+				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="504" y="82" width="80" height="17" uuid="441e0d6e-f961-406a-ab64-9201762feae8"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="536" y="-4" width="105" height="74" uuid="929eb512-f434-4779-b17b-f96b29a32171"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="149" y="-2" width="105" height="74" uuid="1d67778c-2122-4ab3-9847-b0d04fead3fa"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
 			<staticText>
-				<reportElement x="220" y="116" width="31" height="17" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<reportElement x="149" y="70" width="100" height="17" uuid="2c7d377a-e2f7-4716-b594-3d7fa8bc55d0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Desde]]></text>
+				<text><![CDATA[rpt_reporte_mtac]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="457" y="123" width="40" height="17" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
+				<reportElement x="359" y="31" width="66" height="17" uuid="85ebf31b-1e3d-4c38-9d7f-646348aa8b9c"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[SISASMRH]]></text>
+			</staticText>
+			<textField evaluationTime="Report">
+				<reportElement x="584" y="82" width="40" height="17" uuid="5d54a8be-14f2-4e4e-915a-17bbdc6e6382"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="383" y="77" width="33" height="17" uuid="085ce855-0cff-418c-812b-35cccb2eb624"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="149" y="82" width="40" height="17" uuid="519dbbf8-a4c0-451e-8708-ac913aca6512"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Fecha:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="322" y="60" width="128" height="17" uuid="c4cf59a3-958a-4f22-8b79-2cb05d725534"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Reporte de Motoristas Activos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="536" y="70" width="48" height="17" uuid="e92aee2d-d971-4e36-b1c1-932b5a050c7b"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="497" y="123" width="100" height="17" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
+				<reportElement x="572" y="70" width="85" height="17" uuid="b0a72f58-aee6-4cbc-84ea-8efaadf360ac"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="416" y="77" width="63" height="17" uuid="7b64f2a7-dd6e-494e-a303-cd76f9c90210"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="695" y="92" width="100" height="17" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<reportElement x="179" y="82" width="100" height="17" uuid="70b69794-a023-4f73-9b19-9ce14a84dfec"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="328" y="18" width="132" height="17" uuid="3d8d22ee-a8b5-4056-be01-6610a915e735"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="296" y="77" width="42" height="17" uuid="618f3778-4f49-4a0e-9d5c-5b2351c841e1"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Desde]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="251" y="116" width="100" height="17" uuid="444789e4-36d6-48a7-aa94-5a0d710aad34"/>
+				<reportElement x="328" y="77" width="49" height="17" uuid="02368846-16be-495f-9671-6fc02ac56150"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="649" y="92" width="43" height="17" uuid="883df247-75ef-4008-b640-715c4d177483"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Fecha]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="652" y="128" width="43" height="17" uuid="89b09c93-0548-4f44-95b5-1a54c3a0b028"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Usuario]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="697" y="128" width="85" height="17" uuid="5c5e7dbb-9f8a-46df-8e2c-cc2e539829d0"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="19" y="116" width="100" height="17" uuid="c01a534d-c09e-4cc7-914d-7ce42a1e9802"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[rpt_reporte_mact]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="630" y="110" width="80" height="17" uuid="e2a2e4cd-d2df-4333-b025-655f9baa2303"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="710" y="110" width="40" height="17" uuid="78cd49e8-527e-4398-befe-a048a0b749c8"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<image>
-				<reportElement x="690" y="4" width="105" height="86" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="19" y="4" width="193" height="86" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement x="294" y="29" width="228" height="17" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[MINISTERIO DE JUSTICA Y SEGURIDAD PUBLICA]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="310" y="13" width="187" height="17" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="360" y="45" width="84" height="17" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
-			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="24" splitType="Stretch">
+		<band height="22" splitType="Stretch">
 			<rectangle>
-				<reportElement x="5" y="0" width="790" height="17" uuid="d5513917-5253-4a46-99e7-2dcb51a074ca"/>
+				<reportElement x="194" y="0" width="399" height="17" uuid="d5513917-5253-4a46-99e7-2dcb51a074ca"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="119" y="0" width="132" height="17" uuid="45933b9f-8ac2-4df1-a559-c0d867795b56"/>
-				<textElement>
+				<reportElement x="205" y="0" width="85" height="17" uuid="45933b9f-8ac2-4df1-a559-c0d867795b56"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="335" y="0" width="122" height="17" uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6"/>
-				<textElement>
+				<reportElement x="318" y="0" width="122" height="17" uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
+			<line>
+				<reportElement x="290" y="0" width="1" height="17" uuid="c6d65010-f54f-4130-8de2-8b5f2392e658"/>
+			</line>
+			<line>
+				<reportElement x="475" y="0" width="1" height="17" uuid="8fa96789-a449-4572-bb82-27ce23d77752"/>
+			</line>
 			<staticText>
-				<reportElement x="555" y="0" width="180" height="17" uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Fecha de aprobación]]></text>
+				<reportElement x="484" y="1" width="100" height="20" uuid="a3239d0e-b13b-4957-9ba6-5c6ed28e6ebf"/>
+				<textElement verticalAlignment="Middle"/>
+				<text><![CDATA[Fin contrato]]></text>
 			</staticText>
-			<line>
-				<reportElement x="327" y="0" width="1" height="17" uuid="c6d65010-f54f-4130-8de2-8b5f2392e658"/>
-			</line>
-			<line>
-				<reportElement x="512" y="0" width="1" height="17" uuid="8fa96789-a449-4572-bb82-27ce23d77752"/>
-			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="14" splitType="Stretch">
+		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement x="119" y="0" width="100" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="361" y="0" width="100" height="14" uuid="4dc8a9e4-aae4-4aa4-b776-02013673e81a"/>
+				<reportElement x="309" y="0" width="137" height="14" uuid="4dc8a9e4-aae4-4aa4-b776-02013673e81a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="573" y="0" width="100" height="14" uuid="58bbfe9d-771d-4262-9192-27b1287ad00a"/>
+				<reportElement x="479" y="2" width="76" height="14" uuid="cc5573e8-2d96-4330-a786-587afec13997"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$F{Fin contrato}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="214" y="2" width="69" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="35" splitType="Stretch">
+		<band height="41" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="666" y="19" width="129" height="13" backcolor="#FFFFFF" uuid="c211ce2a-7249-42b6-8606-b43ce21bd549"/>
+				<reportElement mode="Opaque" x="484" y="10" width="129" height="13" backcolor="#FFFFFF" uuid="c211ce2a-7249-42b6-8606-b43ce21bd549"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="6" y="8" width="792" height="1" uuid="5771fdb5-4983-4d06-bfec-4bf433dd04fb"/>
+				<reportElement x="484" y="4" width="100" height="1" uuid="5771fdb5-4983-4d06-bfec-4bf433dd04fb"/>
 			</line>
 		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="35" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
